force-app/main/default/objects/Title__c/Title__c.object-meta.xml
<CustomObject>
    <description>Stores the Title / Honour / Merit / Rank to be Voted upon.</description>
    <label>Title</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Titles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>