force-app/main/default/objects/Title__c/fields/Title_Description__c.field-meta.xml
<CustomField>
    <fullName>Title_Description__c</fullName>
    <inlineHelpText>Description / Details / Elaborated Context</inlineHelpText>
    <label>Title Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>